<?xml version="1.0" encoding="utf-8"?>
<!--
 * Author   : Márcio José Mantau
 * Version  : 1.0
 * Date     : 02/10/2013
 * Copyright:
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutLoginMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MintCream"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutLoginContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/game_logo" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_appname"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/CadetBlue"
            android:textSize="20sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textViewWhiteSpace1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_whiteSpace"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/linearLayoutLoginEditUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_state_valid"
            android:orientation="vertical" 
            android:padding="5dp">

            <EditText
                android:id="@+id/editTextUsername"
                style="@style/EditTextAppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/str_username"
                android:inputType="textPersonName" 
     
                >

                <requestFocus />

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutLoginEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_state_valid"
            android:orientation="vertical"
            android:padding="5dp" 
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/EditTextAppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/str_email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutLoginSelectTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_state_valid"
            android:orientation="vertical"
            android:padding="5dp" 
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textViewSelectTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_selectteam"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroupSelectTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioButtonRed"
                    style="@style/RadioButtonAppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_team_a"
                    android:textColor="@color/blue100" />

                <RadioButton
                    android:id="@+id/radioButtonBlue"
                    style="@style/RadioButtonAppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_team_b"
                    android:textColor="@color/blue100" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewWhiteSpace2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_whiteSpace"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutLoginFooter"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/header_game2" >

        <Button
            android:id="@+id/buttonStartGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_selector"
            android:text="@string/str_start"
            android:width="150dp" />
    </RelativeLayout>

</RelativeLayout>