<?xml version="1.0" encoding="utf-8"?>
<!--
 * Author   : Márcio José Mantau
 * Version  : 1.0
 * Date     : 02/10/2013
 * Copyright:
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutHelpMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutHelpContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayoutHelpFooter"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center|top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewTitleHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_help"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/CadetBlue"
            android:textSize="20sp"
            android:typeface="monospace" />

        <WebView
            android:id="@+id/webViewHelpContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutHelpFooter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/header_game2" >

        <Button
            android:id="@+id/buttonReturnToGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_selector"
            android:text="@string/return_toindex"
            android:width="150dp" />

        <Button
            android:id="@+id/buttonReturnToIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_selector"
            android:text="@string/return_toapp"
            android:width="150dp" />
    </RelativeLayout>

</RelativeLayout>